# openleadr-python

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README_DOCKER.md  VERSION  dev_requirements.txt  dockerfile  main.py  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: python-package.yml  test-suite.yml
certificates/: dummy_ca.crt  dummy_ca.key  dummy_ca.srl  dummy_ven.crt  dummy_ven.csr  dummy_ven.key  dummy_vtn.crt  dummy_vtn.csr  dummy_vtn.key  generate_certificates.sh
docs/: Makefile  client.rst  conf.py  examples.rst  features.rst  index.rst  logging.rst  message_signing.rst  openadr.rst  reporting.rst  representations.rst  roadmap.rst  server.rst
docs/api/: modules.rst  openleadr.rst  pyopenadr.rst  pyopenadr.service.rst
openleadr/: 75F.md  __init__.py  ca_file.pem  client.py  enums.py  errors.py  fingerprint.py  hooks.py  main.py  messaging.py  objects.py  preflight.py  privkey.pem  server.py  utils.py
openleadr/expCerts/: cert.pem  privkey.pem
openleadr/schema/: LICENSES.txt
openleadr/service/: __init__.py  decorators.py  event_service.py  opt_service.py  poll_service.py  registration_service.py  report_service.py  vtn_service.py
openleadr/templates/: oadrCancelOpt.xml  oadrCancelPartyRegistration.xml  oadrCancelReport.xml  oadrCanceledOpt.xml  oadrCanceledPartyRegistration.xml  oadrCanceledReport.xml  oadrCreateOpt.xml  oadrCreatePartyRegistration.xml  oadrCreateReport.xml  oadrCreatedEvent.xml  oadrCreatedOpt.xml  oadrCreatedPartyRegistration.xml  oadrPayload.xml  (+11 more)
pyopenadr/: __init__.py  client.py  config.py  datatypes.py  enums.py  errors.py  messaging.py  preflight.py  server.py  signature.py  utils.py
test/: __init__.py  cert.pem  key.pem  test_certificates.py  test_client_misc.py  test_errors.py  test_event_distribution.py  test_failures.py  test_fingerprint_cmdline.py  test_message_conversion.py  test_objects.py  test_opt.py  test_poll_responses.py  test_queues.py  test_registrations.py  test_reports.py  test_schema.py  test_signatures.py  test_utils.py
(+66 files in other folders)
