# SPDX-License-Identifier: Apache-2.0

# Copyright 2020 Contributors to OpenLEADR

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "openleadr"
version = "0.5.29"
description = "Python3 library for building OpenADR Clients (VENs) and Servers (VTNs)"
license = "Apache-2.0"
authors = []
readme = "README.md"
homepage = "https://openleadr.org"
repository = "https://github.com/OpenLEADR/openleadr-python"
documentation = "https://openleadr.org/docs/"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"
APScheduler = "^3.10.0"
Jinja2 = "^3.1.2"
signxml = "2.10.1"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
# Sphinx and flake8 are mutually incompatible before Python 3.8 due to a conflicting dependency on `importlib-metadata`
flake8 = [
    {version = "^5.0.4", python = "<3.8.1"},
    {version = "^6.0.0", python = "^3.8.1"},
]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
termcolor = "^2.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Sphinx and flake8 are mutually incompatible before Python 3.8 due to a conflicting dependency on `importlib-metadata`
Sphinx = [
    {version = "^4.3.2", python = "<3.8.1"},
    {version = "^6.1.3", python = "^3.8.1"},
]
sphinxcontrib-apidoc = "^0.3.0"

[tool.poetry.scripts]
fingerprint = "openleadr.fingerprint:show_fingerprint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
